--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="container">
-    <h1> Chloe wonderland!</h1>
+    <h1> Chloe got it!</h1>
     <button id="clap-button" class="button">👏</button>
   </div>
 </body>
